crates/connectors/ndc-citus/tests/snapshots/query_tests__aggregation__aggregate_count_albums_plus_field.snap
---
source: crates/connectors/ndc-citus/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Let There Be Rock"
      },
      {
        "Title": "Big Ones"
      },
      {
        "Title": "Jagged Little Pill"
      },
      {
        "Title": "Facelift"
      },
      {
        "Title": "Warner 25 Anos"
      }
    ],
    "aggregates": {
      "how_many_albums": 347,
      "how_many_artist_ids": 347,
      "how_many_distinct_artist_ids": 204,
      "min_artist_id": 1,
      "max_artist_id": 275,
      "avg_artist_id": 121.94236311239193
    }
  }
]
